[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/Book.gd" type="Script" id=1]
[ext_resource path="res://Assets/GFX/cutscene/Book/arrow.png" type="Texture" id=2]
[ext_resource path="res://Assets/GFX/cutscene/Book/arrow-right.png" type="Texture" id=3]
[ext_resource path="res://Assets/GFX/cutscene/Book/pencil.png" type="Texture" id=4]
[ext_resource path="res://Assets/GFX/UI/newBottles/bottle2.png" type="Texture" id=5]
[ext_resource path="res://Fonts/Roboto-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/GFX/UI/bookOpen.png" type="Texture" id=7]
[ext_resource path="res://Assets/GFX/UI/blueMushIcon.png" type="Texture" id=8]
[ext_resource path="res://Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]
size = 40
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 22
use_filter = true
extra_spacing_top = 10
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=3]
size = 22
use_filter = true
extra_spacing_top = 10
font_data = ExtResource( 9 )

[sub_resource type="Animation" id=4]
resource_name = "ShowDescription"
length = 16.0
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Notes:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.33, 2.16, 2.69, 3.37, 3.92, 4.68, 5.28, 5.89, 6.62, 6.98, 7.84, 8.12, 8.86, 9.7, 10.25, 10.88, 11.83, 12.44, 13.04, 13.87, 14.27, 14.94 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.08, 0.08, 0.168074, 0.168, 0.245395, 0.245, 0.33565, 0.336, 0.42322, 0.423, 0.492991, 0.493, 0.561069, 0.561, 0.652598, 0.653, 0.74863, 0.749, 0.848776, 0.849, 0.914963, 0.915, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../Path2D/PathFollow2D:unit_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../Path2D/PathFollow2D/Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.02, 15.07, 15.69 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}

[sub_resource type="Curve2D" id=5]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 513.015, 116.236, 0, 0, 0, 0, 893.561, 118.218, 0, 0, 0, 0, 518.961, 157.858, 0, 0, 0, 0, 862.47, 157.512, 0, 0, 0, 0, 518.961, 193.534, 0, 0, 0, 0, 825.278, 194.969, 0, 0, 0, 0, 517.097, 232.682, 0, 0, 0, 0, 881.846, 236.217, 0, 0, 0, 0, 517.489, 270.069, 0, 0, 0, 0, 862.712, 274.524, 0, 0, 0, 0, 516.747, 309.417, 0, 0, 0, 0, 821.137, 312.387, 0, 0, 0, 0, 516.004, 347.28, 0, 0, 0, 0, 821.879, 350.992, 0, 0, 0, 0, 516.004, 385.143, 0, 0, 0, 0, 883.5, 389.598, 0, 0, 0, 0, 516.747, 422.264, 0, 0, 0, 0, 906.515, 425.976, 0, 0, 0, 0, 516.004, 459.385, 0, 0, 0, 0, 908.742, 466.067, 0, 0, 0, 0, 515.642, 498.624, 0, 0, 0, 0, 809.353, 503.301, 0, 0, 0, 0, 516.578, 536.975, 0, 0, 0, 0, 901.956, 543.523 )
}

[node name="Book" type="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -294.5
margin_right = 294.5
margin_bottom = 489.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BookTexture" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -294.5
margin_top = -174.5
margin_right = -254.5
margin_bottom = -204.5
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="BookTexture"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftContainer" type="VBoxContainer" parent="BookTexture/HBoxContainer"]
margin_left = 64.0
margin_right = 514.0
margin_bottom = 691.0
rect_min_size = Vector2( 400, 0 )
custom_constants/separation = 30
alignment = 1

[node name="MushroomTitle" type="RichTextLabel" parent="BookTexture/HBoxContainer/LeftContainer"]
margin_top = 102.0
margin_right = 450.0
margin_bottom = 152.0
rect_min_size = Vector2( 450, 50 )
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Blue Mushroom[/center]"
text = "Blue Mushroom"

[node name="MushroomContainer" type="CenterContainer" parent="BookTexture/HBoxContainer/LeftContainer"]
margin_top = 182.0
margin_right = 450.0
margin_bottom = 324.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mushroom" type="TextureRect" parent="BookTexture/HBoxContainer/LeftContainer/MushroomContainer"]
margin_left = 162.0
margin_right = 287.0
margin_bottom = 142.0
texture = ExtResource( 8 )

[node name="JuiceTitle" type="RichTextLabel" parent="BookTexture/HBoxContainer/LeftContainer"]
margin_top = 354.0
margin_right = 450.0
margin_bottom = 404.0
rect_min_size = Vector2( 450, 50 )
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Treated by Pink Juice[/center]"
text = "Treated by Pink Juice"

[node name="JuiceContainer" type="CenterContainer" parent="BookTexture/HBoxContainer/LeftContainer"]
margin_top = 434.0
margin_right = 450.0
margin_bottom = 588.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Juice" type="TextureRect" parent="BookTexture/HBoxContainer/LeftContainer/JuiceContainer"]
margin_left = 163.0
margin_right = 286.0
margin_bottom = 154.0
texture = ExtResource( 5 )

[node name="RightContainer" type="VBoxContainer" parent="BookTexture/HBoxContainer"]
margin_left = 514.0
margin_right = 914.0
margin_bottom = 691.0
rect_min_size = Vector2( 400, 0 )
alignment = 1

[node name="Description" type="RichTextLabel" parent="BookTexture/HBoxContainer/RightContainer"]
margin_top = 95.0
margin_right = 400.0
margin_bottom = 595.0
rect_min_size = Vector2( 400, 500 )
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "The blue mushrooms MUST be sprayed by the pink spray bottle. The player selects the spray bottle from the backpack and loads it into the cannon. Once loaded the player has to hit the blue mushroom. Once hit X1 the mushroom brightens and sprays miniscule spores that lightens the mist ever so slightly. The mushrooms work as trampolines. The spray droplet will hit the mushroom, bounce to the next mushroom depending on angle of spray."
text = "The blue mushrooms MUST be sprayed by the pink spray bottle. The player selects the spray bottle from the backpack and loads it into the cannon. Once loaded the player has to hit the blue mushroom. Once hit X1 the mushroom brightens and sprays miniscule spores that lightens the mist ever so slightly. The mushrooms work as trampolines. The spray droplet will hit the mushroom, bounce to the next mushroom depending on angle of spray."

[node name="AnimationPlayer" type="AnimationPlayer" parent="BookTexture/HBoxContainer/RightContainer"]
anims/ShowDescription = SubResource( 4 )

[node name="ArrowContainer" type="HBoxContainer" parent="BookTexture"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -450.214
margin_top = -112.0
margin_right = 8651.79
margin_bottom = 885.0
rect_scale = Vector2( 0.1, 0.1 )
custom_constants/separation = 7000
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftButton" type="TextureButton" parent="BookTexture/ArrowContainer"]
margin_right = 1051.0
margin_bottom = 997.0
texture_normal = ExtResource( 2 )

[node name="RightButton" type="TextureButton" parent="BookTexture/ArrowContainer"]
margin_left = 8051.0
margin_right = 9102.0
margin_bottom = 997.0
texture_normal = ExtResource( 3 )

[node name="Path2D" type="Path2D" parent="BookTexture"]
curve = SubResource( 5 )

[node name="PathFollow2D" type="PathFollow2D" parent="BookTexture/Path2D"]
position = Vector2( 901.954, 543.523 )
rotation = 0.00520463
offset = 7869.5
rotate = false
loop = false

[node name="Sprite" type="Sprite" parent="BookTexture/Path2D/PathFollow2D"]
visible = false
position = Vector2( 7.92792, -0.0412598 )
rotation = -0.00520463
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )
offset = Vector2( 427.765, -452.349 )

[node name="WritingTween" type="Tween" parent="BookTexture"]
[connection signal="pressed" from="BookTexture/ArrowContainer/LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="pressed" from="BookTexture/ArrowContainer/RightButton" to="." method="_on_RightButton_pressed"]
